# crewai-ai-agent-security-news-summarizer

./: README.md  article_summaries.md  cves.md  pyproject.toml  urls.md
.cursor/rules/: crewai.mdc
src/security_news_summary/: crew.py  main.py
src/security_news_summary/config/: agents.yaml  tasks.yaml
src/security_news_summary/tools/: __init__.py  table_scraper.py
