[project]
name = "security_news_summary"
version = "0.1.0"
description = "security-news-summary using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0"
]

[project.scripts]
security_news_summary = "security_news_summary.main:run"
run_crew = "security_news_summary.main:run"
train = "security_news_summary.main:train"
replay = "security_news_summary.main:replay"
test = "security_news_summary.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
